# solidrive

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
libsolid-rs/: Cargo.toml  README.md
libsolid-rs/src/: auth.rs  lib.rs  storage.rs
solid-rs-cli/: Cargo.toml
solid-rs-cli/src/: main.rs
