[package]
name = "libsolid-rs"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openidconnect = { version = "1.0.0-alpha.9" }
failure = "0.1"
hyper = "0.13.0-alpha.4"
futures = "0.3"
actix-web = "2.0.0-alpha.1"
actix-rt = "1.0.0-alpha.1"
url = "2.1.0"

[features]
default = []
test-net = []
test-interactive = []