[package]
name = "libsolid-rs"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openidconnect = { version = "1.0.0-alpha.9" }
failure = "0.1"
hyper = "0.13.0-alpha.4"
futures = "0.3"
actix-web = "2.0.0-alpha.1"
actix-rt = "1.0.0-alpha.1"
actix-server = "1.0.0-alpha.2"
url = "2.1"
serde = "1.0"
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
mktemp = "0.4"
reqwest = { version = "0.10.0-alpha.2", features = [ "blocking", "cookies", "tls" ] }

[features]
default = []
test-net = []
test-interactive = []