[package]
name = "solid-rs-cli"
version = "0.1.0"
authors = ["Stefan Junker <mail@stefanjunker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsolid-rs = { path = "../libsolid-rs" }
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
dirs = "2.0"